--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,7 @@
-# Node
 node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Build output
 .next
 out
 dist
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Mac & Windows junk
+.env*
 .DS_Store
 Thumbs.db
