--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "sellitbuyit-teaser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
-  "vercel-build": "npm ci && npm run build",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
